v4l2bufferpool: Cleanup poll method and retry on EINTR/EAGAIN

https://bugzilla.gnome.org/show_bug.cgi?id=731015